@@ -1,4 +1,9 @@
-* Thu Jul 12 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.5-0
+* Thu Oct 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.2.0-0
+- Added $dracut_ensure, $fipscheck_ensure and $nss_ensure parameters
+  - Changed the packages from 'latest' to 'installed'
+  - It will also respect `simp_options::package_ensure`
+
+* Thu Jul 12 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.0-0
 - Added support for OEL and Puppet 5
 - Add a message to the reboot_notify resource to be more helpful
 
